overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ header h1 {
     padding-top: 9.375rem;
     padding-bottom: 6.25rem;
     font-size: 1.25rem;
+    overflow: hidden;
 }
 
 .feature-section .main-wrapper {
